syntax = "proto3";

option java_package = "exp.protobuf";
option java_outer_classname = "AddressProto";

message Address {
    string address1 = 1;
    string address2 = 2;
    string city = 3;
    StateAbbr state = 4;
    string zip = 5;

    enum StateAbbr {
        AA = 0;
        BB = 1;
        CC = 2;
    }

}